--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,9 @@ layout: compress
 
   <body data-spy="scroll" data-target="#toc">
 
-    {% include sidebar.html %}
+    <div id="sidebar" class="d-flex flex-column">
+      {% include sidebar.html %}
+    </div>
 
     {% include topbar.html %}
 
