--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -111,15 +111,7 @@ layout: default
 
   </div> <!-- #post-wrapper -->
 
-  {% assign enable_toc = false %}
-
-  {% if site.toc and page.toc %}
-    {% if content contains '<h2' or content contains '<h3' %}
-      {% assign enable_toc = true %}
-    {% endif %}
-  {% endif %}
-
-  {% include panel.html toc=enable_toc %}
+  {% include panel.html %}
 
 </div> <!-- .row -->
 
