--- a/_includes/refactor-content.html
+++ b/_includes/refactor-content.html
@@ -4,10 +4,7 @@
 
 {% assign _content = include.content %}
 
-<!--
-  In order to allow a wide table to scroll horizontally,
-  we suround the markdown table with `<div class="table-wrapper">` and `</div>`
--->
+<!-- Suroundding the markdown table with '<div class="table-wrapper">. and '</div>' -->
 {% if _content contains '<table>' %}
   {% assign _content = _content
     | replace: '<table>', '<div class="table-wrapper"><table>'
