--- a/assets/css/_addon/main.scss
+++ b/assets/css/_addon/main.scss
@@ -6,12 +6,11 @@
 * MIT Licensed
 */
 
+@import "_addon/fonts";
 @import "_addon/module";
 @import "_addon/variables";
 @import "_colors/light-typography";
 @import "_colors/dark-typography";
-
-@import url('https://fonts.googleapis.com/css2?family=Lato&family=Source+Sans+Pro:wght@400;600;900&display=swap');
 
 
 @mixin mode-toggle($dark-mode: false) {
@@ -46,7 +45,7 @@ html[mode=dark] {
   }
 }
 
-:root {
+html, body {
   font-size: 16px;
 }
 
@@ -74,45 +73,44 @@ $sidebar-display: "sidebar-display";
   width: $sidebar-width-medium;
   z-index: 99;
   background: var(--sidebar-bg);
-
   a {
     @include sidebar-links;
-    &:hover {
-      color: #fff;
-      @include no-text-decoration;
-    }
   }
 
   .site-title {
+    text-align: center;
     a {
       font-weight: 900;
       font-size: 1.5rem;
       letter-spacing: 0.5px;
+      &:hover {
+        color: #fff;
+        text-decoration: none;
+      }
     }
   }
 
   .site-subtitle {
     font-size: 95%;
+    text-align: center;
     color: #828282;
     line-height: 1.2rem;
     word-spacing: 1px;
-    margin: 0.5rem 1.5rem 0.5rem 1.5rem;
-    min-height: 3rem; // avoid vertical shifting in multi-line words
-    user-select: none;
+    margin: 0.5rem 1.5rem 2rem 1.5rem;
   }
 
+  .sidebar-bottom {
+    .icon-border + a { // the icon behide mode-toggle
+      margin-left: 0.1rem;
+    }
+  }
   .nav-link {
     border-radius: 0;
     font-size: 0.95rem;
     font-weight: 600;
     letter-spacing: 1px;
-    display: table-cell;
-    vertical-align: middle;
   }
-
   .nav-item {
-    text-align: center;
-    display: table;
     height: $tab-height;
     &:hover {
       .nav-link {
@@ -125,38 +123,27 @@ $sidebar-display: "sidebar-display";
       }
     }
   }
-
   ul {
     height: $tab-height * $tab-count;
-    margin-bottom: 2rem;
-    padding-left: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
 
-    > li {
-      width: 100%;
-
-      &:last-child {
-        $cursor-width: 3px;
-
-        > a {
-          position: relative;
-          left: $cursor-width / 2;
-          width: 100%;
-        }
-
-        &::after { // the cursor
-          display: table;
-          visibility: hidden;
-          content: "";
-          position: relative;
-          right: 1px;
-          width: $cursor-width;
-          height: $tab-cursor-height;
-          border-radius: 1px;
-          background-color: var(--nav-cursor-color);
-          pointer-events: none;
-        }
+    > li:last-child {
+      > a {
+        margin-right: -3px;
+        max-width: calc(100% - 3px);
       }
-    } // li
+      &::after { // the cursor
+        visibility: hidden;
+        content: "";
+        position: relative;
+        right: 1px;
+        width: 3px;
+        height: $tab-cursor-height;
+        background-color: var(--nav-cursor-color);
+        pointer-events: none;
+      }
+    }
 
     @mixin fix-cursor($top) {
       top: $top;
@@ -187,18 +174,9 @@ $sidebar-display: "sidebar-display";
 
   .sidebar-bottom {
     font-size: 1.2rem;
-    margin-bottom: 2.1rem;
-
-    @include ml-mr(auto);
-    @include pl-pr(1rem);
-
-    %icon {
-      width: 2.4rem;
-      text-align: center;
-    }
-
+    margin: 2rem 2.5rem 1.6rem;
     a {
-      @extend %icon;
+      margin-bottom: 0.5rem; // icons may have multi lines
     }
 
     a:hover, #mode-toggle-wrapper > i:hover {
@@ -206,8 +184,6 @@ $sidebar-display: "sidebar-display";
     }
 
     #mode-toggle-wrapper {
-      @extend %icon;
-
       i {
         @include sidebar-links;
         margin: 0;
@@ -216,21 +192,16 @@ $sidebar-display: "sidebar-display";
         position: relative;
         bottom: 1px;
       }
-
     }
 
     .icon-border {
-      background-color: #525354;
-      content: "";
+      background: #525354;
       width: 3px;
       height: 3px;
       border-radius: 50%;
-      position: relative;
-      top: 12px;
+      margin-top: 0.75rem;
     }
-
-  } // .sidebar-bottom
-
+  }
 } // #sidebar
 
 @media (hover: hover) {
@@ -242,9 +213,13 @@ $sidebar-display: "sidebar-display";
   }
 }
 
-.profile-wrapper {
-  margin-top: 2rem;
+#nav-wrapper {
   width: 100%;
+  flex-grow: 1;
+}
+
+#profile-wrapper {
+  margin-top: 2rem;
 }
 
 #avatar {
@@ -363,7 +338,6 @@ $sidebar-display: "sidebar-display";
   border-radius: 0;
   padding: 0.18rem 0.3rem;
   color: var(--text-color);
-  font-size: 95%;
 }
 
 #search-input {
@@ -679,17 +653,16 @@ sup {
   }
 }
 
-.footnotes > ol {
-  padding-left: 2rem;
+.footnotes ol {
   margin-top: 0.5rem;
   > li {
-    + li {
-      margin-top: 0.3rem;
-    }
+    padding-top: 0.2rem;
+    margin-top: -0.2rem;
     > p {
-      margin-left: 0.25em;
-      margin-top: 0;
-      margin-bottom: 0;
+      padding-left: 0.2em;
+    }
+    &:not(:last-child) {
+      margin-bottom: -.8rem;
     }
     &:target > p {
       background-color: var(--footnote-target-bg);
@@ -770,15 +743,14 @@ img {
 
 
 /*--- Begin of Markdown table style ---*/
-
-.table-wrapper { // it will be created by Liquid
+div.post-content .table-wrapper {
   overflow-x: auto;
-  margin-bottom: 1.5rem;
 
   > table {
-    min-width: 100%;
+    min-width: 60%;
     overflow-x: auto;
     border-spacing: 0;
+    margin-bottom: 1.5rem;
 
     thead {
       border-bottom: solid 2px rgba(210, 215, 217, 0.75);
@@ -834,27 +806,16 @@ img {
   overflow-wrap: break-word;
   word-wrap: break-word;
 
-  img[data-src] {
-    margin: 0.5rem 0;
-  }
-
-  @mixin img-caption {
-    + em {
-      display: block;
-      text-align: center;
-      font-style: normal;
-      font-size: 80%;
-      padding: 0;
-      color: #6d6c6c;
-    }
-  }
-
   @mixin img($caption: false) {
-
     > img[data-src] {
+      margin: 0.5rem 0;
 
-      @if $caption {
-        @include img-caption;
+      &:not(.normal):not(.left):not(.right) {
+        @include align-center;
+
+        @if $caption {
+          @include img-caption;
+        }
       }
 
       &.left {
@@ -867,6 +828,17 @@ img {
         margin: 0.75rem 0 1rem 1rem;
       }
 
+    }
+  }
+
+  @mixin img-caption {
+    + em {
+      display: block;
+      text-align: center;
+      font-style: normal;
+      font-size: 80%;
+      padding: 0;
+      color: #6d6c6c;
     }
   }
 
@@ -884,18 +856,16 @@ img {
     }
   }
 
-  > p {
-    > img[data-src]:not(.normal):not(.left):not(.right) {
-      @include align-center;
-    }
-  }
-
   p {
     font-size: 1.08rem;
     @include img(true);
-  }
+  }// p
 
   ul {
+    &.task-list, &:not([class]) {
+      padding-left: 2rem;
+    }
+
     // attribute 'hide-bullet' was added by liquid
     .task-list-item[hide-bullet] {
       list-style-type: none;
@@ -917,32 +887,6 @@ img {
     }
 
   } // ul
-
-  > ol, > ul {
-    padding-left: 2rem;
-
-    li {
-      + li {
-        margin-top: 0.3rem;
-      }
-
-      ol, ul { // sub list
-        padding-left: 2rem;
-        margin-top: 0.3rem;
-      }
-    }
-
-  }
-
-  > ol {
-    li {
-      padding-left: 0.25em;
-    }
-  }
-
-  dl > dd {
-    margin-left: 1rem;
-  }
 
 } // .post-content
 
@@ -1101,6 +1045,7 @@ img {
     transition: transform 0.4s ease;
   }
 
+
   html, body {
     overflow-x: hidden;
   }
@@ -1210,7 +1155,7 @@ img {
 
   .footnotes ol > li {
     padding-top: 3.5rem;
-    margin-top: -3.2rem !important;
+    margin-top: -4.3rem;
     &:first-child {
       margin-top: -3.5rem;
     }
@@ -1237,17 +1182,13 @@ img {
     margin-left: $sidebar-width-medium;
   }
 
-  .profile-wrapper {
+  #profile-wrapper {
     margin-top: 3rem;
   }
 
   #search-wrapper {
     width: 22%;
     min-width: 150px;
-  }
-
-  div.post-content .table-wrapper > table {
-    min-width: 70%;
   }
 
   /* button 'back-to-Top' position */
@@ -1286,11 +1227,9 @@ img {
   #sidebar {
     width: $sidebar-width-small;
     .sidebar-bottom {
-      a, span {
-        width: 2rem;
-      }
+      @include ml-mr(1.5rem);
       .icon-border {
-        left: -3px;
+        @include ml-mr(.25rem);
       }
     }
   }
@@ -1470,123 +1409,112 @@ img {
     margin-right: 3%;
   }
 
-  #sidebar {
-    width: $sidebar-width-large;
+  #profile-wrapper {
+    margin: 4rem 2rem 3rem 4rem;
+    -ms-flex-direction: column!important;
 
-    .profile-wrapper {
-      margin-top: 4rem;
-      margin-bottom: 1rem;
-
-      &.text-center {
-        text-align: left !important;
-      }
-
-      %profile-ml {
-        margin-left: 4.5rem;
-      }
-
-      #avatar {
-        @extend %profile-ml;
-
-        > a {
-          width: 6.2rem;
-          height: 6.2rem;
-          &.mx-auto {
-            margin-left: 0 !important;
-          }
-        }
-      }
-
-      .site-title {
-        @extend %profile-ml;
-        a {
-          font-size: 1.7rem;
-          letter-spacing: 1px;
-        }
-      }
-
-      .site-subtitle {
-        @extend %profile-ml;
-        word-spacing: 0;
-        margin-top: 0.3rem;
-      }
-
-    } // .profile-wrapper (min-width: 1650px)
-
-    ul {
-      padding-left: 2.5rem;
-
-      > li:last-child {
-        > a {
-          position: static;
-        }
-      }
-
-      .nav-item {
-        text-align: left;
-
-        .nav-link {
-          > span {
-            letter-spacing: 3px;
-          }
-
-          > i {
-            @include icon-round(1.65rem);
-
-            line-height: 1.5rem;
-            font-size: 0.6rem;
-            padding-top: 1px;
-            padding-left: 1px;
-            position: relative;
-            bottom: 1px;
-
-            &.unloaded {
-              display: inline-block !important;
-            }
-          }
-        }
-
+    #avatar {
+      -webkit-box-pack: normal !important;
+      -ms-flex-pack: normal !important;
+      justify-content: normal !important;
+      > a {
+        width: 6.2rem;
+        height: 6.2rem;
       }
     }
 
-    .sidebar-bottom {
-      padding-left: 3.5rem;
-      width: 100%;
+    .profile-text {
+      margin-left: 0.5rem;
+      /* .d-flex */
+      display: -webkit-box!important;
+      display: -ms-flexbox!important;
+      display: flex!important;
+      /* .flex-wrap */
+      -ms-flex-wrap: wrap!important;
+      flex-wrap: wrap!important;
+      /* .align-content-center */
+      -ms-flex-line-pack: center!important;
+      align-content: center!important;
+      > div {
+        text-align: left !important;
+        width: 100%;
+      }
+    }
+  }
 
-      &.justify-content-center {
+  #sidebar {
+    width: $sidebar-width-large;
+
+    .site-title a {
+      font-size: 1.7rem;
+      letter-spacing: 1px;
+      margin: 0;
+    }
+
+    .site-subtitle {
+      word-spacing: 0;
+      margin: 0.3rem 0 0 0;
+    }
+
+    ul {
+      margin-left: 3%;
+      > li > a {
+        padding-left: 2.5rem;
         -webkit-box-pack: start!important;
         -ms-flex-pack: start!important;
         justify-content: flex-start!important;
       }
+    }
 
-      a {
-        font-size: 1rem;
-        width: 3rem;
+    .nav-link {
+      > span {
+        letter-spacing: 3px;
       }
+      > i {
+        @include icon-round(1.65rem);
+        line-height: 1rem;
+        font-size: 0.6rem;
+        padding: 0.5em 0 0 0.1em;
+        display: inline-block!important;
+      }
+    }
 
-      i {
-        @include icon-round(2rem);
-        padding-top: 0.44rem;
-        margin-top: .7rem; // multi line space
-        bottom: 0;
+    .sidebar-bottom {
+      margin-left: 3.5rem;
+      margin-right: 3rem;
+      font-size: 1.3rem;
+      a {
+        border: 1px solid;
+        border-radius: 50%;
+        font-size: 1rem;
+        width: 2rem;
+        height: 2rem;
+        text-align: center;
+        i {
+          text-align: center;
+          width: 1.25em;
+          padding-top: 0.44rem;
+        }
       }
 
       #mode-toggle-wrapper {
-        width: 3rem;
-
+        font-size: 0.9rem;
         i {
-          top: 11px;
+          @include icon-round(2rem);
+          padding-top: 0.44rem;
+          bottom: 0;
         }
       }
 
       .icon-border {
-        top: 26px;
+        @include ml-mr(.2rem);
+        margin-top: 0.85rem;
+        +a {
+          margin-left: 0;
+        }
       }
-
     } // .sidebar-bottom
-
   } // #sidebar
-
   footer > div.d-flex {
     width: 87%;
     max-width: 1140px;
