--- a/assets/css/_addon/module.scss
+++ b/assets/css/_addon/module.scss
@@ -65,6 +65,7 @@
   color: $color;
   transition: color 0.35s ease-in-out;
   user-select: none;
+  margin: 0 0.25rem;
 }
 
 @mixin icon-round($diameter) {
@@ -96,6 +97,7 @@
   color: $color;
   font-size: $font-size;
   font-weight: $font-weight;
+  font-family: 'Roboto Condensed', 'Microsoft Yahei', sans-serif;
 }
 
 @mixin panel-label {
