--- a/assets/css/_addon/syntax.scss
+++ b/assets/css/_addon/syntax.scss
@@ -56,7 +56,6 @@ div > pre {
   @extend %code-snippet-radius;
 
   color: var(--highlighter-rouge-color);
-  margin-top: 0.5rem;
   margin-bottom: 1.2em; /* Override BS Inline-code style */
 }
 
@@ -112,6 +111,7 @@ code {
   &.highlighter-rouge {
     font-size: $code-font-size;
     padding: 3px 5px;
+    margin: 0 0.15rem;
     border-radius: 4px;
     background-color: var(--inline-code-bg);
   }
@@ -149,7 +149,7 @@ div {
   }
 }
 
-div[class^='language-']::before {
+[class^='language-']::before {
   content: attr(lang);
   position: absolute;
   right: 1.8rem;
@@ -161,7 +161,7 @@ div[class^='language-']::before {
 }
 
 @media (min-width: 768px) {
-  div[class^='language-']::before {
+  [class^='language-']::before {
     right: 3.1rem;
   }
 }
