--- a/assets/css/archives.scss
+++ b/assets/css/archives.scss
@@ -19,6 +19,10 @@
   background-color: var(--timeline-color);
 }
 
+%date-font {
+  font-family: 'Roboto Condensed', sans-serif;
+}
+
 #archives {
   letter-spacing: 0.03rem;
   li {
@@ -38,6 +42,7 @@
 
   span.lead {
     font-size: 1.5rem;
+    @extend %date-font;
     position: relative;
     left: 8px;
 
@@ -49,7 +54,8 @@
       }
     }
 
-    &::after { /* Year dot */
+    &::after {
+      /* Year dot */
       content: "";
       display: block;
       position: relative;
@@ -74,8 +80,8 @@
     &.month {
       width: 1.4rem;
       text-align: center;
-
-      ~ a::before {
+      @extend %date-font;
+      ~a::before {
         /* A dot for Month and Day */
         content: "";
         display: inline-block;
